--- a/game_rules/index.html
+++ b/game_rules/index.html
@@ -842,8 +842,8 @@
     </div>
 
     <!-- Dependencies -->
-    <script src="js/ven/marked.umd.js"></script>
-    <script src="js/ven/purify.min.js"></script>
+    <script src="js/vendor/marked.umd.js"></script>
+    <script src="js/vendor/purify.min.js"></script>
 
     <!-- App modules -->
     <script src="js/markdown.js"></script>
