--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ bg-terra: "bg-hero-pattern "
 {% include toolbar.html 
   qr_scanner=true 
   type_matchup=true
+  multiplayer_home=true
   lastPage=true
   hamburger=true
   filter=true
