--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ bg-terra: "bg-hero-pattern "
 
 {% include toolbar.html 
   qr_scanner=true 
-  type_matchup=true
-  multiplayer_home=true
+  local_fists_tool_home=true
+  multiplayer=true
   lastPage=true
   hamburger=true
   filter=true
