--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@ bg-terra: "bg-hero-pattern "
 
 {% include toolbar.html 
   qr_scanner=true 
-  local_fists_tool_home=true
-  multiplayer=true
+  local_fists_tool=true
+  multiplayer_fists_tool_home=true
+  multiplayer_home=true
   lastPage=true
   hamburger=true
   filter=true
