Multiplayer turn timer revamp

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@ bg-terra: "bg-hero-pattern "
   qr_scanner=true 
   local_fists_tool=true
   multiplayer_fists_tool_home=true
+  turn_tracker=true
+  multiplayer_turn_tool=true
   multiplayer_home=true
   lastPage=true
   hamburger=true
   filter=true
-  turn_tracker=true
   install_pwa=true
   logo=true
   hideTools=true
