--- a/_posts/2024-06-07-hidden_portal_of_lower_dreadmont_cave.html
+++ b/_posts/2024-06-07-hidden_portal_of_lower_dreadmont_cave.html
@@ -15,14 +15,14 @@ scarcity: "Founder's Deck"
 
 criteria: "
 
-Ante up a strong soul (2+ keal means tolerance) who has lost all but one keal means or is downed. Have it travel to the cave. <br>
+Ante up a strong soul which has 2 or more keal means. Mark all but one of its keal means as damaged if not already (or it may be downed if you are brave). It begins it journey to the cave. <br>
 <br>
 <p>
-Step 1: Roll to determine where cave is located (territory at random) <br>
-Step 2: Without healing, it must make it to the territory in a slot without contention (either basecamp or movement spots) <br>
-<strong>The soul is now in the cave and cannot be followed, and has no effect on contention in the area.</strong> <br>
-Step 3: Roll, with the soul's normal attack roll, against your opponent with a D20 and win. Wait a turn. <br>
-Step 4: Roll, with the soul's normal attack roll, against your opponent with all their dice and win. <br>
+Step 1: Roll to determine where cave is located (territory at random) <br><br>
+Step 2: Without healing, it must make it to the territory in a slot without contention (either basecamp or movement spots) <br><br>
+<strong>The soul is now in the cave and cannot be followed, and has no effect on contention in the area.</strong> <br><br>
+Step 3: Roll, with the soul's normal attack roll, against your opponent with a D20 and win. Wait a turn. <br><br>
+Step 4: Roll, with the soul's normal attack roll, against your opponent with all their dice and win. <br><br>
 <br>
 Perform these steps within 3 diel cycles from the turn the card was played.
 </p>
@@ -30,12 +30,12 @@ Perform these steps within 3 diel cycles from the turn the card was played.
 
 success: "
 All steps were completed within 3 diel cycles. Your soul overcame impossible odds and faced the cave's torments. 
-Choose 4 territories to waste and heal the anted soul.
+Choose up to 12 territories to lay waste and heal the anted soul.
 "
 
 failure: "
-One or more of the steps were failed or your opponent wasted the anted soul. 
-The soul you anted was not of the right heart. It is wasted and placed at the bottom of your opponents deck.
+One or more of the steps were failed, your opponent wasted the anted soul along the way, or you failed to make it to the cave in time. 
+The soul you anted was not of the right heart. It is wasted.
 "
 
 description: "
