MP Timer bug pass 1

--- a/_posts/2024-06-07-hidden_portal_of_lower_dreadmont_cave.html
+++ b/_posts/2024-06-07-hidden_portal_of_lower_dreadmont_cave.html
@@ -15,7 +15,7 @@ scarcity: "Founder's Deck"
 
 criteria: "
 
-Ante up a strong soul which has 2 or more keal means. Mark all but one of its keal means as damaged if not already (or it may be downed if you are brave). It begins it journey to the cave. <br>
+Ante up a strong soul which has 2 or more keal means. Mark all but one of its keal means as damaged if not already (or you may use any already downed soul if you are brave). It begins it journey to the cave. <br>
 <br>
 <p>
 Step 1: Roll to determine where cave is located (territory at random) <br><br>
@@ -29,7 +29,7 @@ Perform these steps within 3 diel cycles from the turn the card was played.
 "
 
 success: "
-All steps were completed within 3 diel cycles. Your soul overcame impossible odds and faced the cave's torments. 
+All steps were completed within 3 days. Your soul overcame impossible odds and faced the cave's torments. 
 Choose up to 12 territories to lay waste and heal the anted soul.
 "
 
