--- a/kipukas_rules_book/index.html
+++ b/kipukas_rules_book/index.html
@@ -53,7 +53,8 @@
 
         <!-- Logo + title -->
         <a href="/" class="flex items-center gap-2 hover:opacity-80 transition-opacity">
-            <img src="./images/small_kip_logo.png" alt="Kipukas" class="h-14 w-14">
+            <img src="./images/small_kip_logo.png" alt="Kipukas" class="h-14 w-14 shrink-0 object-contain">
+
         </a>
         <h1 class="font-bold text-lg hidden sm:block">Kipukas Rules</h1>
 
@@ -61,7 +62,6 @@
         <div class="flex-1"></div>
 
         <!-- QR Scanner button -->
-        <div id="qr-container"></div>
         <button class="p-2 rounded-lg hover:bg-sky-800 transition-colors" title="Scan QR Code"
                 onclick="window.kipukasLoadQR().then(function() { if (window.kipukasQR) window.kipukasQR.toggle(); })">
             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
@@ -125,7 +125,7 @@
 
         <!-- Sidebar -->
         <aside id="sidebar"
-               class="fixed lg:static inset-y-0 left-0 z-30 w-72 bg-sky-800 text-sky-100 flex flex-col transition-transform duration-300 mt-[57px] lg:mt-0"
+               class="fixed lg:static inset-y-0 left-0 z-30 w-72 bg-sky-800 text-sky-100 flex flex-col transition-transform duration-300 mt-14.25 lg:mt-0"
                :class="sidebarOpen ? 'translate-x-0' : '-translate-x-full lg:translate-x-0'">
             <div class="px-4 py-3 border-b border-sky-700 flex items-center justify-between shrink-0">
                 <span class="font-semibold text-sky-200 text-sm uppercase tracking-wider">Table of Contents</span>
@@ -169,6 +169,9 @@
         </main>
     </div>
 
+    <!-- QR Overlay -->
+    <div id="qr-container" class="fixed inset-0 z-50 flex items-center justify-center" style="display:none;"></div>
+
     <!-- Chat Widget (Kippa) -->
     <div class="fixed bottom-5 right-5 z-50">
         <!-- Chat toggle button -->
@@ -184,7 +187,7 @@
         <!-- Chat panel -->
         <div x-show="chatOpen" x-cloak
              x-transition.duration.300ms
-             class="absolute bottom-16 right-0 w-80 sm:w-96 h-[28rem] bg-sky-950 rounded-2xl shadow-2xl border border-sky-800 flex flex-col overflow-hidden"
+             class="absolute bottom-16 right-0 w-80 sm:w-96 h-112 bg-sky-950 rounded-2xl shadow-2xl border border-sky-800 flex flex-col overflow-hidden"
              id="chat-panel">
             <!-- Chat header -->
             <div class="bg-sky-900 px-4 py-3 flex items-center gap-2 border-b border-sky-800 shrink-0">
