--- a/kipukas_rules_book/index.html
+++ b/kipukas_rules_book/index.html
@@ -170,7 +170,7 @@
     </div>
 
     <!-- QR Overlay -->
-    <div id="qr-container" class="fixed inset-0 z-50 flex items-center justify-center" style="display:none;"></div>
+    <div id="qr-container"></div>
 
     <!-- Chat Widget (Kippa) -->
     <div class="fixed bottom-5 right-5 z-50">
