Add affinity tracking

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ bg-terra: "bg-hero-pattern "
   qr_scanner=true 
   local_fists_tool=true
   multiplayer_fists_tool_home=true
+  affinity_tool=true
   turn_tracker=true
   multiplayer_turn_tool=true
   multiplayer_home=true
