Add tamability + loyalty

--- a/_posts/2023-09-05-balanced_inline_processing_colony.html
+++ b/_posts/2023-09-05-balanced_inline_processing_colony.html
@@ -1,6 +1,8 @@
 ---
 layout: Species
 
+tamability: 0
+
 permalink: /balanced_inline_processing_colony/
 
 title: "Balanced Inline Processing Colony"
