Quick rules clean

--- a/_about/using_the_binder.html
+++ b/_about/using_the_binder.html
@@ -60,9 +60,9 @@ bg-terra: "bg-hero-pattern "
       </p>
 
       <div class="z-20 w-5/6 md:w-4/6 place-self-center pb-4 flex flex-wrap gap-4 justify-center">
-        <img src="/kipukas_rules_book/images/QR_modal.png" alt="QR modal screenshot"
+        <img src="/game_rules/images/QR_modal.png" alt="QR modal screenshot"
           class="w-full max-w-xs rounded shadow" loading="lazy" />
-        <img src="/kipukas_rules_book/images/QR_scanner.png" alt="QR scanner screenshot"
+        <img src="/game_rules/images/QR_scanner.png" alt="QR scanner screenshot"
           class="w-full max-w-xs rounded shadow" loading="lazy" />
       </div>
 
@@ -107,9 +107,9 @@ bg-terra: "bg-hero-pattern "
       </p>
 
       <div class="z-20 w-5/6 md:w-4/6 place-self-center pb-4 flex flex-wrap gap-4 justify-center">
-        <img src="/kipukas_rules_book/images/fists_open.png" alt="Fists tool open"
+        <img src="/game_rules/images/fists_open.png" alt="Fists tool open"
           class="w-full max-w-xs rounded shadow" loading="lazy" />
-        <img src="/kipukas_rules_book/images/fists_closed.png" alt="Fists tool closed"
+        <img src="/game_rules/images/fists_closed.png" alt="Fists tool closed"
           class="w-full max-w-xs rounded shadow" loading="lazy" />
       </div>
 
@@ -124,9 +124,9 @@ bg-terra: "bg-hero-pattern "
       </p>
 
       <div class="z-20 w-5/6 md:w-4/6 place-self-center pb-4 flex flex-wrap gap-4 justify-center">
-        <img src="/kipukas_rules_book/images/healthy_keal_means.png" alt="Healthy KEAL means tracker"
+        <img src="/game_rules/images/healthy_keal_means.png" alt="Healthy KEAL means tracker"
           class="w-full max-w-40 rounded shadow" loading="lazy" />
-        <img src="/kipukas_rules_book/images/injured_keal_means.png" alt="Injured KEAL means tracker"
+        <img src="/game_rules/images/injured_keal_means.png" alt="Injured KEAL means tracker"
           class="w-full max-w-40 rounded shadow" loading="lazy" />
       </div>
 
@@ -135,7 +135,7 @@ bg-terra: "bg-hero-pattern "
       </p>
 
       <div class="z-20 w-5/6 md:w-4/6 place-self-center pb-4 flex justify-center">
-        <img src="/kipukas_rules_book/images/keal_means_clean.png" alt="KEAL means reset toolbar option"
+        <img src="/game_rules/images/keal_means_clean.png" alt="KEAL means reset toolbar option"
           class="w-full max-w-xs rounded shadow" loading="lazy" />
       </div>
 
@@ -152,7 +152,7 @@ bg-terra: "bg-hero-pattern "
       <h2 id="affinity-tool" class="z-20 text-xl md:text-2xl pt-6 pb-2 place-self-center">Affinity Tool</h2>
 
       <p class="z-20 w-5/6 md:w-4/6 place-self-center pb-2">
-        Open the affinity tool by clicking the <b>DNA helix icon</b> in the toolbar. Here you declare your
+        Open the affinity tool by clicking the <b>Heart icon</b> in the toolbar. Here you declare your
         affinity for an archetypal adaptation <b>once per day</b>. Your affinity level for that archetype
         increases with each declaration. When a soul card's archetypal adaptation matches your declared affinity
         you receive a <b>+1 bonus to attack and defense rolls</b> made for that card. The fists tool
@@ -191,7 +191,7 @@ bg-terra: "bg-hero-pattern "
       </p>
 
       <div class="z-20 w-5/6 md:w-4/6 place-self-center pb-4 flex justify-center">
-        <img src="/kipukas_rules_book/images/recipe_lookup.png" alt="Recipe lookup tool"
+        <img src="/game_rules/images/recipe_lookup.png" alt="Recipe lookup tool"
           class="w-full max-w-xs rounded shadow" loading="lazy" />
       </div>
 
